# Job-Boards

./: .gitignore  CMakeLists.txt  CMakePresets.json  Job Boards.slnx  Job Boards.vcxproj  Job Boards.vcxproj.filters  vcpkg.json
include/jobboards/: scraper.hpp
src/: job_posting.cpp  job_posting.hpp  scraper.cpp  scraper.hpp
src/cli/: scrape.cpp
tests/: CMakeLists.txt  test_job_posting.cpp
